<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="data"
            type="com.cobi.puresurveyandroid.model.PipelineProduct" />

        <variable
            name="number"
            type="String" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightGrey"
        android:orientation="vertical">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:background="@color/white"
                      android:orientation="vertical"
                      android:paddingLeft="@dimen/margin_50"
                      android:paddingTop="30dp"
                      android:paddingRight="20dp"
                      android:paddingBottom="@dimen/margin_20">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/sectionTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/proposal_policy" />


                <TextView
                    style="@style/sectionValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{number}" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/layoutCustomerRow"
                android:layout_marginTop="@dimen/margin_10"
                android:layout_marginBottom="@dimen/margin_10"
                android:background="@color/divider_colour" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/sectionTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product" />

                <TextView
                    style="@style/sectionValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{String.format(@string/product_type, data.product.trim(),data.type.trim())}" />

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/layoutCustomerRow"
                android:layout_marginTop="@dimen/margin_10"
                android:layout_marginBottom="@dimen/margin_10"
                android:background="@color/divider_colour" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/sectionTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_status_date" />


                <TextView
                    style="@style/sectionValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{data.statusDate}" />


            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/layoutCustomerRow"
                android:layout_marginTop="@dimen/margin_10"
                android:layout_marginBottom="@dimen/margin_10"
                android:background="@color/divider_colour" />

            <TextView
                style="@style/sectionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="Outstanding requirements:" />

            <LinearLayout
                style="@style/sectionTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:id="@+id/outstandingLayout">
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/layoutCustomerRow"
                android:layout_marginTop="@dimen/margin_10"
                android:layout_marginBottom="@dimen/margin_10"
                android:background="@color/divider_colour" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/layoutCustomerRow"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginBottom="@dimen/margin_10"
            android:background="@color/divider_colour" />
    </LinearLayout>

</layout>
